# server/openapi_server/openapi/openapi.yaml
@@ -14,8 +14,6 @@ info:
 servers:
 - url: https://sage-bionetworks.github.io/
 tags:
-- description: Ceate and link synapse queues with workflow engines
-  name: Queue
 - description: Compute environment
   name: Compute
 - description: Allow synapse submissions to interact with supported workflow engines
@@ -23,11 +21,15 @@ tags:
     description: Mimics GA4GH
     url: https://github.com/ga4gh/workflow-execution-service-schemas
   name: Execution
+- description: Ceate and link synapse queues with workflow engines
+  name: Queue
 - description: Submission and its metadata
   externalDocs:
     description: More about submission references
     url: https://rest-docs.synapse.org/rest/#org.sagebionetworks.repo.web.controller.EvaluationController
   name: Submission
+- description: Teams
+  name: Team
 paths:
   /computeEnvs:
     get:
@@ -60,7 +62,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ComputeEnvListResponse'
+                $ref: '#/components/schemas/ListComputeEnvResponse'
           description: Success
         "403":
           content:
@@ -85,14 +87,13 @@ paths:
         content:
           application/json:
             schema:
-              oneOf:
-              - $ref: '#/components/schemas/WesComputeEnv'
+              $ref: '#/components/schemas/CreateComputeEnvRequest'
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ComputeEnvId'
+                $ref: '#/components/schemas/CreateComputeEnvResponse'
           description: Success
         "403":
           content:
@@ -165,8 +166,7 @@ paths:
           content:
             application/json:
               schema:
-                oneOf:
-                - $ref: '#/components/schemas/WesComputeEnvResponse'
+                $ref: '#/components/schemas/ComputeEnv'
           description: Success
         "403":
           content:
@@ -215,7 +215,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/QueueListResponse'
+                $ref: '#/components/schemas/ListQueueResponse'
           description: Success
         "403":
           content:
@@ -240,13 +240,13 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Queue'
+              $ref: '#/components/schemas/CreateQueueRequest'
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/QueueId'
+                $ref: '#/components/schemas/CreateQueueResponse'
           description: Success
         "403":
           content:
@@ -319,7 +319,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/QueueResponse'
+                $ref: '#/components/schemas/Queue'
           description: Success
         "403":
           content:
@@ -359,7 +359,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/QueueResponse'
+                $ref: '#/components/schemas/Queue'
           description: Success
         "403":
           content:
@@ -416,7 +416,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SubmissionListResponse'
+                $ref: '#/components/schemas/ListSubmissionResponse'
           description: Success
         "403":
           content:
@@ -451,15 +451,15 @@ paths:
           application/json:
             schema:
               oneOf:
-              - $ref: '#/components/schemas/DockerSubmission'
-              - $ref: '#/components/schemas/FileSubmission'
-              - $ref: '#/components/schemas/WorkflowSubmission'
+              - $ref: '#/components/schemas/CreateDockerSubmissionRequest'
+              - $ref: '#/components/schemas/CreateFileSubmissionRequest'
+              - $ref: '#/components/schemas/CreateWorkflowSubmissionRequest'
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SubmissionId'
+                $ref: '#/components/schemas/CreateSubmissionResponse'
           description: Success
         "403":
           content:
@@ -648,13 +648,13 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Run'
+              $ref: '#/components/schemas/CreateRunRequest'
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RunId'
+                $ref: '#/components/schemas/CreateRunResponse'
           description: Success
         "403":
           content:
@@ -759,7 +759,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RunId'
+                $ref: '#/components/schemas/Run'
           description: Success
         "403":
           content:
@@ -811,7 +811,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RunId'
+              $ref: '#/components/schemas/Empty'
       responses:
         "204":
           description: The run was cancelled.
@@ -936,13 +936,13 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Team'
+              $ref: '#/components/schemas/CreateTeamRequest'
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TeamId'
+                $ref: '#/components/schemas/CreateTeamResponse'
           description: Success
         "403":
           content:
@@ -1003,7 +1003,7 @@ components:
       - links
       - offset
       type: object
-    QueueResponse:
+    Queue:
       description: A Queue to link submissions to runtime
       example:
         submissionType: docker
@@ -1046,10 +1046,10 @@ components:
           - workflow_inputs
           type: string
       type: object
-    QueueListResponse:
+    ListQueueResponse:
       allOf:
       - $ref: '#/components/schemas/ListResponseMetadata'
-      - $ref: '#/components/schemas/QueueListResponse_allOf'
+      - $ref: '#/components/schemas/ListQueueResponse_allOf'
       description: A page of queues
       type: object
     Error:
@@ -1072,7 +1072,7 @@ components:
       - status
       - title
       type: object
-    Queue:
+    CreateQueueRequest:
       description: A Queue to link submissions to runtime
       example:
         submissionType: docker
@@ -1106,7 +1106,7 @@ components:
           - workflow_inputs
           type: string
       type: object
-    QueueId:
+    CreateQueueResponse:
       example:
         queueId: queueId
       properties:
@@ -1116,32 +1116,103 @@ components:
       type: object
     SubmissionStatus:
       description: Submission status
-      enum:
-      - RECEIVED
-      - EVALUATION_IN_PROGRESS
-      - INVALID
-      - ACCEPTED
-      - REJECTED
-      - VALIDATED
-      - SCORED
-      - CANCELLED
-      type: string
+      example:
+        numberOfRuns: 0
+        status: RECEIVED
+      properties:
+        status:
+          description: Submission status
+          enum:
+          - RECEIVED
+          - SUBMITTED
+          - EVALUATION_IN_PROGRESS
+          - INVALID
+          - ACCEPTED
+          - REJECTED
+          type: string
+        numberOfRuns:
+          description: Number of times submission has been executed
+          type: integer
+      type: object
     DockerSubmission:
       description: A Docker Submission
       properties:
         name:
           description: Name of submission
           type: string
-        submissionId:
+        id:
           description: Submission Id
-          readOnly: true
           type: integer
         submitter:
           description: Submitter name
           type: string
         queueId:
           description: Queue Id
-          readOnly: true
+          type: string
+        status:
+          $ref: '#/components/schemas/SubmissionStatus'
+        docker:
+          $ref: '#/components/schemas/DockerSubmission_docker'
+      type: object
+    WorkflowSubmission:
+      description: A workflow Submission
+      properties:
+        name:
+          description: Name of submission
+          type: string
+        id:
+          description: Submission Id
+          type: integer
+        submitter:
+          description: Submitter name
+          type: string
+        queueId:
+          description: Queue Id
+          type: string
+        status:
+          $ref: '#/components/schemas/SubmissionStatus'
+        workflow:
+          description: Workflow to run
+          type: string
+        workflowInputs:
+          description: Worklfow inputs
+          type: string
+      type: object
+    FileSubmission:
+      description: A file Submission
+      properties:
+        name:
+          description: Name of submission
+          type: string
+        id:
+          description: Submission Id
+          type: integer
+        submitter:
+          description: Submitter name
+          type: string
+        queueId:
+          description: Queue Id
+          type: string
+        status:
+          $ref: '#/components/schemas/SubmissionStatus'
+        file:
+          description: File to submit to challenge
+          type: string
+      type: object
+    ListSubmissionResponse:
+      allOf:
+      - $ref: '#/components/schemas/ListResponseMetadata'
+      - $ref: '#/components/schemas/ListSubmissionResponse_allOf'
+      description: A page of queues
+      type: object
+    CreateDockerSubmissionRequest:
+      description: A Docker Submission
+      properties:
+        name:
+          description: Name of submission
+          type: string
+        submitter:
+          description: Submitter name
           type: string
         status:
           $ref: '#/components/schemas/SubmissionStatus'
@@ -1152,22 +1223,33 @@ components:
       - name
       - submitter
       type: object
-    WorkflowSubmission:
+    CreateFileSubmissionRequest:
+      description: A file Submission
+      properties:
+        name:
+          description: Name of submission
+          type: string
+        submitter:
+          description: Submitter name
+          type: string
+        status:
+          $ref: '#/components/schemas/SubmissionStatus'
+        file:
+          description: File to submit to challenge
+          type: string
+      required:
+      - file
+      - name
+      - submitter
+      type: object
+    CreateWorkflowSubmissionRequest:
       description: A workflow Submission
       properties:
         name:
           description: Name of submission
           type: string
-        submissionId:
-          description: Submission Id
-          readOnly: true
-          type: integer
         submitter:
           description: Submitter name
-          type: string
-        queueId:
-          description: Queue Id
-          readOnly: true
           type: string
         status:
           $ref: '#/components/schemas/SubmissionStatus'
@@ -1181,40 +1263,7 @@ components:
       - name
       - submitter
       type: object
-    FileSubmission:
-      description: A file Submission
-      properties:
-        name:
-          description: Name of submission
-          type: string
-        submissionId:
-          description: Submission Id
-          readOnly: true
-          type: integer
-        submitter:
-          description: Submitter name
-          type: string
-        queueId:
-          description: Queue Id
-          readOnly: true
-          type: string
-        status:
-          $ref: '#/components/schemas/SubmissionStatus'
-        file:
-          description: File to submit to challenge
-          type: string
-      required:
-      - file
-      - name
-      - submitter
-      type: object
-    SubmissionListResponse:
-      allOf:
-      - $ref: '#/components/schemas/ListResponseMetadata'
-      - $ref: '#/components/schemas/SubmissionListResponse_allOf'
-      description: A page of queues
-      type: object
-    SubmissionId:
+    CreateSubmissionResponse:
       example:
         submissionId: submissionId
       properties:
@@ -1223,12 +1272,15 @@ components:
           type: string
       type: object
     SubmissionStatus-2:
-      example: {}
+      example:
+        status:
+          numberOfRuns: 0
+          status: RECEIVED
       properties:
         status:
           $ref: '#/components/schemas/SubmissionStatus'
       type: object
-    Run:
+    CreateRunRequest:
       example:
         data: data
         dataVersion: dataVersion
@@ -1240,13 +1292,41 @@ components:
           description: Data version
           type: string
       type: object
-    RunId:
+    CreateRunResponse:
       example:
         runId: runId
       properties:
         runId:
           description: workflow run ID
           type: string
+      type: object
+    Run:
+      example:
+        data: data
+        dataVersion: dataVersion
+        id: id
+        status: QUEUED
+      properties:
+        id:
+          description: Run Id
+          type: string
+        data:
+          description: Data location
+          type: string
+        dataVersion:
+          description: Data version
+          type: string
+        status:
+          description: Submission Run status
+          enum:
+          - QUEUED
+          - RUNNING
+          - COMPLETE
+          - ERROR
+          - CANCELLED
+          type: string
+      type: object
+    Empty:
       type: object
     Log:
       description: Log and other info
@@ -1296,8 +1376,12 @@ components:
           description: Output of workflow
           type: string
       type: object
-    WesComputeEnvResponse:
-      description: A workflow Submission
+    ComputeEnv:
+      example:
+        apiHost: localhost:8080
+        name: name
+        id: id
+        type: WES
       properties:
         id:
           description: Compute environment ID
@@ -1305,29 +1389,45 @@ components:
         name:
           description: Name of compute environment
           type: string
-        wesApiHost:
+        apiHost:
           default: localhost:8080
           description: Workflow Execution Service implementation endpoint
           type: string
+        type:
+          description: Type of Compute Environment
+          enum:
+          - WES
+          - TES
+          type: string
       type: object
-    ComputeEnvListResponse:
+    ListComputeEnvResponse:
       allOf:
       - $ref: '#/components/schemas/ListResponseMetadata'
-      - $ref: '#/components/schemas/ComputeEnvListResponse_allOf'
+      - $ref: '#/components/schemas/ListComputeEnvResponse_allOf'
       description: A page of queues
       type: object
-    WesComputeEnv:
+    CreateComputeEnvRequest:
       description: A workflow Submission
+      example:
+        apiHost: localhost:8080
+        name: name
+        type: WES
       properties:
         name:
           description: Name of compute environment
           type: string
-        wesApiHost:
+        apiHost:
           default: localhost:8080
           description: Workflow Execution Service implementation endpoint
           type: string
+        type:
+          description: Type of Compute Environment
+          enum:
+          - WES
+          - TES
+          type: string
       type: object
-    ComputeEnvId:
+    CreateComputeEnvResponse:
       example:
         computeEnvId: computeEnvId
       properties:
@@ -1335,7 +1435,7 @@ components:
           description: Compute environment ID
           type: string
       type: object
-    Team:
+    CreateTeamRequest:
       example:
         teamId: teamId
         name: name
@@ -1352,7 +1452,7 @@ components:
           description: Description of Team.
           type: string
       type: object
-    TeamId:
+    CreateTeamResponse:
       example:
         teamId: teamId
       properties:
@@ -1366,12 +1466,12 @@ components:
         next:
           description: Link to the next page of results
           type: string
-    QueueListResponse_allOf:
+    ListQueueResponse_allOf:
       properties:
         queues:
           description: An array of queues
           items:
-            $ref: '#/components/schemas/QueueResponse'
+            $ref: '#/components/schemas/Queue'
           type: array
     DockerSubmission_docker:
       properties:
@@ -1388,7 +1488,7 @@ components:
       required:
       - digest
       - name
-    SubmissionListResponse_allOf:
+    ListSubmissionResponse_allOf:
       properties:
         submissions:
           description: An array of queues
@@ -1398,11 +1498,10 @@ components:
             - $ref: '#/components/schemas/WorkflowSubmission'
             - $ref: '#/components/schemas/FileSubmission'
           type: array
-    ComputeEnvListResponse_allOf:
+    ListComputeEnvResponse_allOf:
       properties:
         computeEnvs:
           description: An array of queues
           items:
-            oneOf:
-            - $ref: '#/components/schemas/WesComputeEnvResponse'
+            $ref: '#/components/schemas/ComputeEnv'
           type: array
